fix: Add permissions fix step before artifact upload
- Fix EACCES permission denied error when uploading test-mail artifacts
- Add sudo chmod to make mbox files readable by GitHub Actions
- Run permission fix on 'always()' condition to handle both success and failure

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -40,6 +40,11 @@ jobs:
         run: docker pull ghcr.io/lets-qa/local-test-mail-server:main
       - name: Run integration tests
         run: pytest -v -m "integration" --tb=short
+      - name: Fix permissions for artifact upload
+        if: always()
+        run: |
+          sudo chmod -R 755 test-mail/ logs/ 2>/dev/null || true
+          sudo chmod 644 test-mail/root 2>/dev/null || true
       - name: Upload logs on failure
         if: failure()
         uses: actions/upload-artifact@v4
